Add status fragment

--- a/app/src/main/res/layout/status_fragment.xml
+++ b/app/src/main/res/layout/status_fragment.xml
@@ -37,6 +37,15 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
+                    <TextView
+                        android:id="@+id/magisk_version"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:padding="6dp"
+                        android:textStyle="bold"/>
+
                     <FrameLayout
                         android:id="@+id/magisk_status_container"
                         android:layout_width="match_parent"
@@ -51,52 +60,6 @@
                             android:layout_height="84dp"
                             android:layout_gravity="center"/>
 
-                    </FrameLayout>
-
-                    <TextView
-                        android:id="@+id/magisk_version"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:gravity="center"
-                        android:padding="6dp"
-                        android:textStyle="bold"/>
-
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:id="@+id/magisk_updateView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp"
-                android:layout_marginLeft="5dip"
-                android:layout_marginRight="5dip"
-                android:layout_marginTop="6dp"
-                style="?attr/cardStyle"
-                app:cardUseCompatPadding="true">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <FrameLayout
-                        android:id="@+id/magisk_check_updates_container"
-                        android:layout_width="match_parent"
-                        android:layout_height="100dp"
-                        android:background="?android:attr/selectableItemBackground"
-                        android:foregroundGravity="center"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:id="@+id/magisk_check_updates_icon"
-                            android:layout_width="84dp"
-                            android:layout_height="84dp"
-                            android:layout_gravity="center"
-                            android:src="@drawable/ic_check_circle"/>
-
                         <ProgressBar
                             android:id="@+id/magisk_check_updates_progress"
                             android:layout_width="wrap_content"
@@ -106,7 +69,62 @@
                     </FrameLayout>
 
                     <TextView
-                        android:id="@+id/magisk_check_updates_status"
+                        android:id="@+id/magisk_update_status"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:padding="6dp"
+                        android:textStyle="bold"
+                        android:text="@string/checking_for_updates" />
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/rootStatusView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:layout_marginLeft="5dip"
+                android:layout_marginRight="5dip"
+                android:layout_marginTop="6dp"
+                style="?attr/cardStyle"
+                app:cardUseCompatPadding="true">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/root_status"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:padding="6dp"
+                        android:textStyle="bold"/>
+
+                    <FrameLayout
+                        android:id="@+id/root_status_container"
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
+                        android:background="?android:attr/selectableItemBackground"
+                        android:foregroundGravity="center"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:id="@+id/root_status_icon"
+                            android:layout_width="84dp"
+                            android:layout_height="84dp"
+                            android:layout_gravity="center" />
+
+                    </FrameLayout>
+
+                    <TextView
+                        android:id="@+id/root_info"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -119,7 +137,7 @@
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
-                android:id="@+id/app_updateView"
+                android:id="@+id/safetyNetView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
@@ -135,21 +153,21 @@
                     android:orientation="vertical">
 
                     <FrameLayout
-                        android:id="@+id/app_check_updates_container"
+                        android:id="@+id/safetyNet_container"
                         android:layout_width="match_parent"
                         android:layout_height="100dp"
                         android:foregroundGravity="center"
                         android:orientation="vertical">
 
                         <ImageView
-                            android:id="@+id/app_check_updates_icon"
+                            android:id="@+id/safetyNet_icon"
                             android:layout_width="84dp"
                             android:layout_height="84dp"
                             android:layout_gravity="center"
                             android:src="@drawable/ic_check_circle"/>
 
                         <ProgressBar
-                            android:id="@+id/app_check_updates_progress"
+                            android:id="@+id/safetyNet_check_progress"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"/>
@@ -157,13 +175,14 @@
                     </FrameLayout>
 
                     <TextView
-                        android:id="@+id/app_check_updates_status"
+                        android:id="@+id/safetyNet_status"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:gravity="center"
                         android:padding="6dp"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold"
+                        android:text="@string/checking_safetyNet_status" />
 
                 </LinearLayout>
 
