--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -6,9 +6,14 @@
         android:id="@+id/main_group">
 
         <item
-            android:id="@+id/magisk"
+            android:id="@+id/status"
+            android:icon="@drawable/ic_device_information"
+            android:title="@string/status"/>
+
+        <item
+            android:id="@+id/install"
             android:icon="@drawable/magisk"
-            android:title="@string/magisk"/>
+            android:title="@string/install"/>
 
         <item
             android:id="@+id/modules"
