Fix download button overlay on repo description when expanded

--- a/app/src/main/res/layout/list_item_repo.xml
+++ b/app/src/main/res/layout/list_item_repo.xml
@@ -69,7 +69,8 @@
                 android:layout_gravity="center_vertical"
                 android:text="@string/no_info_provided"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textIsSelectable="false"/>
+                android:textIsSelectable="false"
+                android:layout_alignEnd="@+id/author" />
 
             <ImageView
                 android:id="@+id/update"
