Couple of changes to themes
i added colorPrimary/Dark to dark theme, it looks better with it, then i changed selected text color on nav drawer, it looks a bit dark on dark theme

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,8 @@
     <color name="accent">#FFC107</color>
     <color name="accentFallback">#FBC02D</color>
     <color name="icon_grey">#757575</color>
+    <color name="grey800">#424242</color>
+    <color name="grey900">#212121</color>
 
     <color name="red500">#F44336</color>
     <color name="green500">#4CAF50</color>
