--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,8 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
+        app:itemTextColor="@color/drawer_item"
+		app:itemIconTint="@color/drawer_icon"
         app:menu="@menu/drawer"/>
 
 </android.support.v4.widget.DrawerLayout>
