--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,6 +16,8 @@
     </style>
 
     <style name="AppTheme.Dark" parent="Theme.AppCompat.NoActionBar">
+	    <item name="colorPrimary">@color/grey800</item>
+        <item name="colorPrimaryDark">@color/grey900</item>
         <item name="colorAccent">@color/accent</item>
         <item name="colorAccentFallback">@color/accentFallback</item>
         <item name="windowActionModeOverlay">true</item>
