Fix Lint errors

--- a/app/src/main/res/drawable/ic_arrow.xml
+++ b/app/src/main/res/drawable/ic_arrow.xml
@@ -9,5 +9,5 @@
         android:fillColor="#000000"
         android:pathData="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z" />
     <path
-        android:pathData="M0-.75h24v24H0z" />
+        android:pathData="M0-0.75h24v24H0z" />
 </vector>
