--- a/app/src/main/res/menu/menu_magiskhide.xml
+++ b/app/src/main/res/menu/menu_magiskhide.xml
@@ -4,6 +4,7 @@
 
     <item
         android:id="@+id/app_search"
+        android:title=""
         app:actionViewClass="android.widget.SearchView"
         app:showAsAction="always"/>
 </menu>
